[package]
name = "gist"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

[[bin]]
name = "gist"
path = "src/main.rs"