[package]
name = "gist"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[[bin]]
name = "gist"
path = "src/main.rs"